# saifer-surgery

./: .gitignore  .gitmodules  LICENSE  README.md  Set-up
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: robot_description.pc  ur_description.pc
docs/: simple_move_commands.ipynb
docs/images/: Research.epgz  System.epgz
src/robot_description/: ur10_dual_arms.urdf  ur10_dual_arms.xacro
src/saif_apps/: README.md
src/saif_apps/contour_launch/: package.xml  readme.md
src/saif_apps/saifer_launch/: CMakeLists.txt
src/saif_control/: README.md
src/saif_control/contour_following/: CMakeLists.txt  package.xml  readme.md
src/saif_control/contour_tracing/: CMakeLists.txt
src/saif_control/ft_compensate/: CMakeLists.txt  package.xml
src/saif_control/ft_compliance/: CMakeLists.txt  package.xml  readme.md
src/saif_control/spacenav_teleop/: CMakeLists.txt  README.md  package.xml
src/saif_devices/: README.md  frames.gv
src/saif_learning/: README.md
src/saif_perception/: README.md
src/saif_planning/: README.md
src/saif_sensors/: README.md
src/saif_sensors/src/kinect2_multi/src/calib/aprilgrid/ethz_apriltag2/src/example/: CMakeLists.txt  apriltags.cpp  apriltags2.cpp  apriltags_demo.cpp
src/saif_tools/: README.md
src/saif_ui/: README.md
src/saif_ui/publish_selected_patch/: CMakeLists.txt  package.xml  plugin_description.xml
src/saif_ui/publish_selected_patch/src/: publish_selected_patch.cpp  publish_selected_patch.h
src/ur10_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+321 files in other folders)
