<package>
  <name>publish_selected_patch</name>
  <version>1.0.0</version>
  <description>
     Publishes selected points on /selected_points topic.
  </description>
  <maintainer email="pxx37@pBartels.net">Peng Xu</maintainer>
  <license>MIT</license>

  <author>Peng Xu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_msgs</run_depend>
  
  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
